# TimeSeriesML

./: Makefile  core.html  darts.html  financial_analysis.html  hyperparameter optimization.html  index.html  prophet.html  pyproject.toml  search.json  settings.ini  sitemap.xml  xclassifier.html  xgboost.html  xgboost2.html  xplainable.html
FFT/: fft-examples.html  fft_analysis.html
Nixtla/: electricityloadforecasting.html  electricitypeakforecasting.html  nixtla - all_methods.html  nixtla - exogenous_variables.html  nixtla - hierarchicalforecast.html  nixtla - mlforecast.html  nixtla - neural_advanced.html  nixtla - neural_save_and_load.html  nixtla - neuralforecast.html  nixtla - statsforecasting.html
TimeSeries_ML/: _modidx.py
_proc/: 000_core.ipynb  001_XGBoost.ipynb  002_XGBoost2.ipynb  003_prophet.ipynb  100_Darts.ipynb  20_Financial_Analysis.ipynb  400_Xplainable.ipynb  401_Xclassifier.ipynb  index.ipynb
_proc/FFT/: 001_FFT_Analysis.ipynb  102_FFT-examples.ipynb
_proc/Nixtla/: 300_Nixtla - StatsForecasting.ipynb  301_ElectricityLoadForecasting.ipynb  302_ElectricityPeakForecasting.ipynb  310_Nixtla - HierarchicalForecast.ipynb  320_Nixtla - MLForecast.ipynb  330_Nixtla - NeuralForecast.ipynb  331_Nixtla - Exogenous_Variables.ipynb  333_Nixtla - Neural_save_and_load.ipynb  334_Nixtla - Neural_Advanced.ipynb  335_Nixtla - All_Methods.ipynb
nbs/: 000_core.ipynb  001_XGBoost.ipynb  002_XGBoost2.ipynb  003_prophet.ipynb  20_Financial_Analysis.ipynb  index.ipynb
nbs/FFT/: 102_FFT-examples.ipynb
nbs/Nixtla/: 300_Nixtla - StatsForecasting.ipynb  (+5 more)
(+28 files in other folders)
