[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "TimeSeries_ML"
dynamic = ["version"]
description = "Machine Learning Time Series Analysis"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "Apache-2.0"}
authors = [{name = "main", email = "bthekkel1@gmail.com"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = []

[project.urls]
Repository = "https://github.com/bthek1/TimeSeries_ML"
Documentation = "https://bthek1.github.io/TimeSeries_ML"

[project.entry-points.nbdev]
TimeSeries_ML = "TimeSeries_ML._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "TimeSeries_ML.__version__"}

[tool.setuptools.packages.find]
include = ["TimeSeries_ML"]

[tool.nbdev]
jupyter_hooks = true
